--- a/src/app/components/admin/product/insert/insert.product.admin.component.html
+++ b/src/app/components/admin/product/insert/insert.product.admin.component.html
@@ -1,30 +1,30 @@
 <div class="container">
     <div class="row">
       <div class="col-md-6 offset-md-3">
-        <h3>Insert Product</h3>
+        <h3>Thêm sản phẩm</h3>
         <form (ngSubmit)="insertProduct()" enctype="multipart/form-data">
           <div class="form-group">
-            <label for="name">Name:</label>
+            <label for="name">Tên:</label>
             <input type="text" id="name" [(ngModel)]="insertProductDTO.name" name="name" class="form-control" required>
           </div>
   
           <div class="form-group mb-3">
-            <label for="price">Price:</label>
+            <label for="price">Giá:</label>
             <input type="text" id="price" [(ngModel)]="insertProductDTO.price" name="price" class="form-control col-md-3" required>
           </div>
   
           <div class="form-group mb-3">
-            <label for="description">Description:</label>
+            <label for="description">Mô tả:</label>
             <textarea id="description" [(ngModel)]="insertProductDTO.description" name="description" class="form-control" required></textarea>
           </div>
 
           <div class="form-group mb-3">
-            <label for="description">Weight:</label>
+            <label for="description">Khối lượng/ dung tích:</label>
             <input type="text" id="weight" [(ngModel)]="insertProductDTO.weight" name="weight" class="form-control col-md-3" required>
           </div>
 
           <div class="form-group mb-3">
-            <label for="category">Category:</label>
+            <label for="category">Danh mục:</label>
             <select id="category" [(ngModel)]="insertProductDTO.category_id" name="category" class="form-control" required>
               <!-- Display list of categories -->
               <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
@@ -32,7 +32,7 @@
           </div>
   
           <div class="form-group mb-3">
-            <label for="images">Images (up to 5):</label>
+            <label for="images">Ảnh (tối đa 5):</label>
             <input type="file" id="images" name="images" multiple (change)="onFileChange($event)" accept="image/*">
           </div>
   
