--- a/src/app/components/admin/product/product.admin.component.html
+++ b/src/app/components/admin/product/product.admin.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Product Admin</h1>
+    <h1>Quản lý sản phẩm</h1>
     <!--Đoạn này có 1 ô searchbox bên trái, 1 combobox bên phải  -->
     <div class="row mb-3">
       <div class="col-md-8">
@@ -19,11 +19,11 @@
       <thead class="table-light">
         <tr>
           <th>ID</th>
-          <th>Name</th>
-          <th>Price</th>
+          <th>Tên</th>
+          <th>Giá</th>
           <th>Thumbnail</th>
-          <th>Description</th>
-          <th>Actions</th>
+          <th>Mô tả</th>
+          <th>Hành động</th>
         </tr>
       </thead>
       <tbody>
@@ -42,10 +42,10 @@
             <div style="display: flex; gap: 10px;">
               <button class="btn btn-primary" 
                   (click)="updateProduct(product.id)">
-                Update
+                Cập nhật
               </button>
               <button class="btn btn-danger" 
-                (click)="deleteProduct(product)">Delete
+                (click)="deleteProduct(product)">Xóa
               </button>            
               </div>
           </td>          
