--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,10 +1,10 @@
 <div id="wrapper">
 
     <!-- Sidebar -->
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion custom-sidebar" id="accordionSidebar">
 
         <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/admin">
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-shopping-basket"></i>
             </div>
@@ -15,6 +15,13 @@
         <hr class="sidebar-divider my-0">
 
         <!-- Divider -->
+        <hr class="sidebar-divider">
+        <li class="nav-item">
+            <a class="nav-link" (click)="showAdminComponent('dasboard')" routerLink="/admin/dashboard"
+            routerLinkActive="active">
+                <i class="fas fa-fw fa-tachometer-alt"></i>
+                <span>Doanh thu</span></a>
+        </li>
         <hr class="sidebar-divider">
         <!-- Nav Item - Tables -->
         <li class="nav-item">
@@ -124,9 +131,6 @@
     <!-- End of Content Wrapper -->
 
 </div>
-<!-- End of Page Wrapper -->
-
-<!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
     <i class="fas fa-angle-up"></i>
 </a>
