--- a/src/app/components/admin/order/order.admin.component.html
+++ b/src/app/components/admin/order/order.admin.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Orders Admin Page</h1>
+  <h1>Quản lý đơn hàng</h1>
   <br>
   <!--Đoạn này có 1 ô searchbox bên trái, 1 combobox bên phải  -->
   <div class="row mb-3">
@@ -15,15 +15,16 @@
       <thead class="table-light">
         <tr>
           <th>ID</th>
-          <th>User ID</th>
-          <th>Full Name</th>
+          <th>Mã khách hàng</th>
+          <th>Tên khách hàng</th>
           <th>Email</th>
-          <th>Phone Number</th>
-          <th>Address</th>
-          <th>Note</th>
-          <th>Order Date</th>
-          <th>Status</th>
-          <th>Total Money</th>
+          <th>SĐT</th>
+          <th>Địa chỉ</th>
+          <th>Ghi chú</th>
+          <th>Ngày đặt</th>
+          <th>Hình thức thanh toán</th>
+          <th>Trạng thái</th>
+          <th>Tổng tiền</th>
           <!--
             <th>Shipping Method</th>
             <th>Shipping Address</th>
@@ -31,13 +32,12 @@
               <th>Shipping Date</th>
             <th>Payment Method</th>
             -->
-          <th>Action</th>
+          <th>Hành động</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let order of orders">
-          <td>
-            {{ order.id }}</td>
+          <td>{{ order.id }}</td>
           <td>{{ order.user_id }}</td>
           <td>{{ order.fullname }}</td>
           <td>{{ order.email }}</td>
@@ -45,21 +45,22 @@
           <td>{{ order.address }}</td>
           <td>{{ order.note }}</td>
           <td>{{ order.order_date | date }}</td>
+          <td>{{ order.payment_method }}</td>
           <td>{{ order.status }}</td>
           <td>{{ order.total_money | number:'1.0-0'}}<sup>đ</sup></td>
-<!--           
+          <!--           
             <td>{{ order.shipping_method }}</td>
             <td>{{ order.shipping_address }}</td>
             
             <td>{{ order.shipping_date | date }}</td>
-            <td>{{ order.payment_method }}</td>
+            
             -->
           <td>
             <div style="display: flex; gap: 10px;">
               <button (click)="viewDetails(order)" class="btn btn-primary">
-                View Details
+                Chi tiết
               </button>
-              <button class="btn btn-danger" (click)="deleteOrder(order.id)">Delete</button>
+              <button class="btn btn-danger" (click)="deleteOrder(order.id)">Xóa</button>
             </div>
           </td>
         </tr>
