--- a/src/app/components/admin/product/update/update.product.admin.component.html
+++ b/src/app/components/admin/product/update/update.product.admin.component.html
@@ -3,32 +3,32 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 offset-md-3">
-          <h3>Update Product</h3>
+          <h3>Cập nhật sản phẩm</h3>
           <form (ngSubmit)="updateProduct()">
             <div class="form-group">
-              <label for="name">Name:</label>
+              <label for="name">Tên:</label>
               <input type="text" id="name" [(ngModel)]="updatedProduct.name" name="name" class="form-control" required>
             </div>
       
             <div class="form-group mb-3">
-              <label for="price">Price:</label>
+              <label for="price">Giá:</label>
               <input type="text" id="price" [(ngModel)]="updatedProduct.price" 
                 name="price" class="form-control col-md-3" required>
             </div>
             
             <div class="form-group mb-3">
-              <label for="price">Weight:</label>
+              <label for="price">Khối lượng/ dung tích:</label>
               <input type="text" id="weight" [(ngModel)]="updatedProduct.weight" 
                 name="weight" class="form-control col-md-3" required>
             </div>
 
             <div class="form-group mb-3">
-              <label for="description">Description:</label>
+              <label for="description">Mô tả:</label>
               <textarea id="description" [(ngModel)]="updatedProduct.description" name="description" class="form-control" required></textarea>
             </div>
       
             <div class="form-group mb-3">
-              <label for="category">Category:</label>
+              <label for="category">Danh mục:</label>
               <select id="category" [(ngModel)]="updatedProduct.category_id" name="category" class="form-control" required>
                 <!-- Hiển thị danh sách các category -->
                 <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
@@ -51,11 +51,11 @@
               </div>
             </div>
             <div class="form-group mb-3">
-              <label for="images">Add images (up to 5):</label>
+              <label for="images">Thêm ảnh (tối đa 5):</label>
               <input type="file" id="images" name="images" 
                 multiple (change)="onFileChange($event)" accept="image/*">
             </div>            
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit" class="btn btn-primary">Cập nhật</button>
           </form>
         </div>
       </div>
