--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,124 +1,144 @@
-<app-header></app-header>
-<div class="container">
-    <form #registerForm="ngForm">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <div class="register-form mx-auto">
-                <h2 class="register-header">Đăng ký</h2>
-                <div class="form-group">
-                    <label for="phoneNumber">Phone's number</label>
-                    <input type="text" 
-                        class="form-control" 
-                        [(ngModel)]="phoneNumber"
-                        (input)="onPhoneNumberChange()"
-                        name="phone"
-                        (focus)="registerForm.form.markAsTouched()"
-                        required id="phoneNumber">
-                    <div class="divider-nospace"></div>
-                    <p class="text-danger" 
-                        *ngIf="phoneNumber.length < 6 
-                        && registerForm.form.touched">Phone phải có ít nhất 6 ký tự</p>
-                </div>
-                <div class="mt-3"></div>
-                <div class="form-group password-field">
-                    <label for="password">Mật khẩu</label>
-                    <input type="{{ showPassword ? 'text' : 'password' }}" 
-                        [(ngModel)]="password"                            
-                        name="password"
-                        placeholder="Ít nhất 3 ký tự" required
-                        class="form-control" id="password">                    
-                    <i class="password-toggle fas" [ngClass]="showPassword ? 
-                        'fa-eye' : 'fa-eye-slash'" (click)="togglePassword()">
-                        </i>
-                    <div class="divider-nospace"></div>
-                    <p class="text-danger" 
-                        *ngIf="password.length < 3 && registerForm.form.touched">
-                        Mật khẩu phải có ít nhất 3 ký tự
-                    </p>
-                </div>
-                <div class="mt-3"></div>
-                <div class="form-group password-field">
-                    <label for="retype-password">Gõ lại mật khẩu</label>
-                    <input type="{{ showPassword ? 'text' : 'password' }}"
-                        placeholder="Ít nhất 3 ký tự" 
-                        [(ngModel)]="retypePassword" 
-                        name="retypePassword"
-                        (input)="registerForm.form.markAsTouched(); checkPasswordsMatch()"
-                        required
-                        class="form-control" id="retype-password">                    
-                    <i class="password-toggle fas" [ngClass]="showPassword ? 
-                        'fa-eye' : 'fa-eye-slash'" (click)="togglePassword()">
-                        </i>
-                    <div class="divider-nospace"></div>
-                    <p class="text-danger" 
-                        *ngIf="retypePassword.length < 3 && registerForm.form.touched">
-                        Mật khẩu phải có ít nhất 3 ký tự
-                    </p>
-                    <p class="text-danger" 
-                    *ngIf="registerForm.controls['retypePassword']?.hasError('passwordMismatch') 
-                            && registerForm.form.touched">
-                    Mật khẩu không khớp
-                    </p>
-                </div>
-                <div class="mt-3"></div>
-                <div class="form-group">
-                    <label for="full-name">Họ và tên</label>
-                    <input type="text" 
-                        [(ngModel)]="fullName"
-                        name="fullName"
-                        class="form-control" required
-                        id="full-name">
-                    <div class="divider-nospace"></div>
-                </div>
-                <div class="form-group">
-                    <label for="date-of-birth">Ngày tháng năm sinh</label>
-                    <!-- Thêm [(ngModel)] để thực hiện 2-way data binding -->
-                    <input type="date" 
-                        class="form-control" 
-                            required
-                            id="date-of-birth" 
-                            [(ngModel)]="dateOfBirth"
-                            name="dateOfBirth"
-                            (input)="registerForm.form.markAsTouched(); checkAge()">
-                            
-                    <div class="divider-nospace"></div>
-                    <p class="text-danger" 
-                    *ngIf="registerForm.controls['dateOfBirth']?.hasError('invalidAge') 
-                            && registerForm.form.touched">
-                        Bạn chưa đủ 18 tuổi
-                    </p>
-                  </div>
-                  
-                <div class="mt-3"></div>
-                <div class="form-group">
-                    <label for="address">Địa chỉ</label>
-                    <input type="text" 
-                        [(ngModel)]="address"
-                        name="address"
-                        class="form-control" 
-                        id="address">
-                    <div class="divider-nospace"></div>
-                </div>
-                <div class="form-group">
-                    <div class="form-check checkbox-text">
-                        <span style="display: flex;">
-                            <input type="checkbox" 
-                                [(ngModel)]="isAccepted"
-                                name="isAccepted"
-                                class="form-check-input" id="agree">
-                            <label class="form-check-label text-start" for="agree">
-                                Tôi đồng ý với các điều khoản và điều kiện</label>
-                        </span>
+<p-toast position="center"></p-toast>
+<section class="vh-100" style="background-color: #eee;">
+    <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-lg-12 col-xl-11">
+                <div class="card text-black" style="border-radius: 25px;">
+                    <div class="card-body p-md-5">
+                        <div class="row justify-content-center">
+                            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Đăng ký</p>
+                                <form class="mx-1 mx-md-4" [formGroup]="registerForm" (ngSubmit)="register()">
+                                    <div class="register-form mx-auto">
+                                        <div class="form-group">
+                                            <label for="phoneNumber">Số điện thoại</label>
+                                            <input type="text" class="form-control" formControlName="phone_number"
+                                                name="phone" (focus)="onFocus()" (blur)="onBlur()" required
+                                                id="phoneNumber">
+                                            <div class="validate"
+                                                *ngIf="phoneNumber?.errors?.['required'] && isFocused">Số điện
+                                                thoại là bắt buộc
+                                            </div>
+                                            <div class="validate"
+                                                *ngIf="phoneNumber?.errors?.['minlength'] && isFocused">Số điện
+                                                thoại phải có ít
+                                                nhất 6 ký tự</div>
+                                            <div class="validate" *ngIf="phoneNumber?.errors?.['pattern'] && isFocused">
+                                                Số điện thoại
+                                                chỉ chứa ký tự
+                                                số</div>
+                                        </div>
+                                        <div class="mt-3">
+                                            <label for="phoneNumber">Email</label>
+                                            <input type="text" class="form-control" formControlName="email" name="email"
+                                                required id="email" (focus)="onFocus()" (blur)="onBlur()">
+                                            <div class="validate" *ngIf="email?.errors?.['email'] && isFocused">Nhập
+                                                đúng định dạng
+                                                email
+                                            </div>
+                                        </div>
+                                        <div class="form-group password-field">
+                                            <label for="password">Mật khẩu</label>
+                                            <input type="{{ showPassword ? 'text' : 'password' }}"
+                                                formControlName="password" name="password" required class="form-control"
+                                                id="password" (focus)="onFocus()" (blur)="onBlur()">
+                                            <div class="validate" *ngIf="password?.errors?.['required'] && isFocused">
+                                                Mật khẩu là bắt
+                                                buộc</div>
+                                            <div class="validate" *ngIf="password?.errors?.['minlength'] && isFocused">
+                                                Mật khẩu phải
+                                                có ít nhất 8 ký
+                                                tự</div>
+                                        </div>
+                                        <div class="mt-3"></div>
+                                        <div class="form-group password-field">
+                                            <label for="retype-password">Gõ lại mật khẩu</label>
+                                            <input type="{{ showPassword ? 'text' : 'password' }}"
+                                                formControlName="retype_password" name="retypePassword" required
+                                                class="form-control" id="retype-password" (focus)="onFocus()"
+                                                (blur)="onBlur()">
+
+                                            <i class="password-toggle fas" [ngClass]="showPassword ? 
+                                            'fa-eye' : 'fa-eye-slash'" (click)="togglePassword()">
+                                            </i>
+                                            <div class="validate"
+                                                *ngIf="retypePassword?.errors?.['required'] && isFocused">Nhập lại
+                                                mật khẩu là bắt
+                                                buộc</div>
+                                            <div class="validate"
+                                                *ngIf="registerForm.errors?.['passwordMismatch'] && isFocused">Mật
+                                                khẩu không khớp
+                                            </div>
+                                        </div>
+                                        <div class="mt-3"></div>
+                                        <div class="form-group">
+                                            <label for="full-name">Họ và tên</label>
+                                            <input type="text" formControlName="fullname" name="fullname"
+                                                class="form-control" required id="full-name" (focus)="onFocus()"
+                                                (blur)="onBlur()">
+                                            <div class="validate" *ngIf="fullname?.errors?.['required'] && isFocused">Họ
+                                                và tên là
+                                                bắt buộc</div>
+                                            <div class="validate" *ngIf="fullname?.errors?.['minlength']" && isFocused>
+                                                Họ và tên phải
+                                                có ít nhất 3 ký
+                                                tự</div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="date-of-birth">Ngày tháng năm sinh</label>
+                                            <!-- Thêm [(ngModel)] để thực hiện 2-way data binding -->
+                                            <input type="date" class="form-control" required id="date-of-birth"
+                                                formControlName="date_of_birth" name="dateOfBirth" (focus)="onFocus()"
+                                                (blur)="onBlur()">
+                                            <div class=" validate"
+                                                *ngIf="dateOfBirth?.errors?.['required'] && isFocused">Ngày sinh là bắt
+                                                buộc
+                                            </div>
+                                        </div>
+
+                                        <div class="mt-3"></div>
+                                        <div class="form-group">
+                                            <label for="address">Địa chỉ</label>
+                                            <input type="text" formControlName="address" name="address"
+                                                class="form-control" id="address" (focus)="onFocus()" (blur)="onBlur()">
+                                            <div class="validate" *ngIf="address?.errors?.['required'] && isFocused">Địa
+                                                chỉ
+                                                là bắt buộc</div>
+                                            <div class="validate" *ngIf="address?.errors?.['minlength'] && isFocused">
+                                                Địa
+                                                chỉ phải có ít nhất 5 ký tự
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-check checkbox-text">
+                                                <span style="display: flex;">
+                                                    <input type="checkbox" (click)="isAccepted()" name="isAccepted"
+                                                        class="form-check-input" id="agree">
+                                                    <label class="form-check-label text-start" for="agree">
+                                                        Tôi đồng ý với các điều khoản và điều kiện</label>
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                            <button type="submit"  [disabled]="Accepted"
+                                                class="btn btn-primary btn-lg ">Đăng
+                                                ký</button>
+                                        </div>
+
+                                        <p class="text-center">Bạn đã có tài khoản? <span>
+                                                <a href="/login" class="register-link">Đăng nhập</a></span></p>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                                    class="img-fluid" alt="Sample image">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <button type="button" 
-                    (click)="register()"
-                    class="register-button">Đăng ký</button>
-                <div class="divider"></div>
-                <p class="text-center">Bạn đã có tài khoản? <span>
-                    <a href="/login" class="register-link">Đăng nhập</a></span></p>
             </div>
         </div>
     </div>
-</form>
-</div>
+</section>
