--- a/src/app/components/shop-grid/shop-grid.component.html
+++ b/src/app/components/shop-grid/shop-grid.component.html
@@ -4,30 +4,6 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <!-- <div class="filter__item">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-5">
-                            <div class="filter__sort">
-                                <span>Sort By</span>
-                                <select>
-                                    <option value="0">Default</option>
-                                    <option value="0">Default</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-4">
-                            <div class="filter__found">
-                                <h6><span>16</span> Products found</h6>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-3">
-                            <div class="filter__option">
-                                <span class="icon_grid-2x2"></span>
-                                <span class="icon_ul"></span>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
                 <div class="hero__search">
                     <div class="hero__search__form">
                         <form (ngSubmit)="searchProducts()">
@@ -60,6 +36,30 @@
                         </li>
                     </ul>
                 </div>
+                <!-- <div class="filter__item">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-5">
+                            <div class="filter__sort">
+                                <span>Sort By</span>
+                                <select>
+                                    <option value="0">Default</option>
+                                    <option value="0">Default</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4">
+                            <div class="filter__found">
+                                <h6><span>16</span> Products found</h6>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-3">
+                            <div class="filter__option">
+                                <span class="icon_grid-2x2"></span>
+                                <span class="icon_ul"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
                 <div class="row featured__filter">
                     <div class="col-lg-3 col-md-4 col-sm-6 mix oranges fresh-meat" *ngFor="let product of products">
                         <div class="featured__item">
@@ -67,9 +67,12 @@
                                 <img [src]="product.url" (click)="onProductClick(product.id)" alt="Product Image"
                                     class="product-image">
                                 <ul class="featured__item__pic__hover">
-                                    <li><a (click)="addToFavourite(product.id)" title="Thêm vào yêu thích"><i class="fa fa-heart"></i></a></li>
-                                    <li><a (click)="addToCart(product.id)" title="Thêm vào giỏ hàng"><i class="fa fa-shopping-cart"></i></a></li>
-                                    <li><a (click)="buyNow(product.id)" title="Mua ngay"><i class="fas fa-shopping-bag"></i></a></li>
+                                    <li><a (click)="addToFavourite(product.id)" title="Thêm vào yêu thích"><i
+                                                class="fa fa-heart"></i></a></li>
+                                    <li><a (click)="addToCart(product.id)" title="Thêm vào giỏ hàng"><i
+                                                class="fa fa-shopping-cart"></i></a></li>
+                                    <li><a (click)="buyNow(product.id)" title="Mua ngay"><i
+                                                class="fas fa-shopping-bag"></i></a></li>
                                 </ul>
                             </div>
                             <div class="featured__item__text">
