--- a/src/app/components/admin/category/update/update.category.admin.component.html
+++ b/src/app/components/admin/category/update/update.category.admin.component.html
@@ -1,18 +1,23 @@
+<p-toast position="center"></p-toast>
 <div *ngIf="updatedCategory">      
     <!-- Form cập nhật thông tin sản phẩm -->
     <div class="container">
       <div class="row">
         <div class="col-md-6 offset-md-3">
-          <h3>Update Category</h3>
-          <form (ngSubmit)="updateCategory()">
+          <h3>Cập nhật danh mục</h3>
+          <form (ngSubmit)="updateCategory()" #categoryForm="ngForm">
             <div class="form-group mb-3">
-              <label for="name">Name:</label>
+              <label for="name">Tên:</label>
               <input type="text" id="name" 
                 [(ngModel)]="updatedCategory.name" 
-                name="name" class="form-control" required>
+                name="name" class="form-control" required #name="ngModel">
+              <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
+                <div *ngIf="name.errors?.['required']">Tên không được để trống.</div>
+              </div>
             </div>                  
-            <button type="submit" class="btn btn-primary">Update</button>
+            <button type="submit" class="btn btn-primary" [disabled]="categoryForm.invalid">Cập nhật</button>
           </form>
+          
         </div>
       </div>
     </div>
