--- a/src/app/components/detail-order/order.detail.component.html
+++ b/src/app/components/detail-order/order.detail.component.html
@@ -66,13 +66,13 @@
                                 </div>
                             </td>
                             <td>{{ item.number_of_products }}</td>
-                            <td>{{ item.price | number:'1.2-2' }}</td>
-                            <td>{{ item.price*item.number_of_products| number:'1.2-2' }}</td>
+                            <td>{{ item.price | number:'1.0-0' }}<sup>đ</sup></td>
+                            <td>{{ item.price*item.number_of_products| number:'1.0-0' }}<sup>đ</sup></td>
                         </tr>
                     </tbody>
                 </table>
                 <div class="text-start mt-3">
-                    <h4 class="header-text text-end">Tổng giá: {{ orderResponse.total_money | number:'1.2-2' }}</h4>
+                    <h4 class="header-text text-end"><b>Tổng tiền: {{ orderResponse.total_money | number:'1.0-0' }}<sup>đ</sup></b></h4>
                 </div>
             </div>
         </div>
