--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -145,7 +145,7 @@
                             <div class="row">
                                 <div class="checkout__input">
                                     <input type="text" formControlName="coupon_code" name="couponCode" id="couponCode"
-                                        placeholder="Enter your coupon code">
+                                        placeholder="Nhập mã giảm giá">
                                 </div>
                                 <div class="checkout__input">
                                     <button (click)="applyCoupon()" class="site-btn">ÁP DỤNG MÃ</button>
