--- a/src/app/components/shop-grid/shop-grid.component.scss
+++ b/src/app/components/shop-grid/shop-grid.component.scss
@@ -12,3 +12,11 @@
     box-shadow: none; /* Remove shadow if any */
     outline: none; /* Remove outline if any */
 }
+.label{
+    margin-right: 10px
+  }
+.price{
+    margin-right: 10px;
+    width: 120px;
+}
+  
