--- a/src/app/components/admin/product/product.admin.component.html
+++ b/src/app/components/admin/product/product.admin.component.html
@@ -1,3 +1,4 @@
+<p-toast position="center"></p-toast>
 <div class="container">
     <h1>Quản lý sản phẩm</h1>
     <!--Đoạn này có 1 ô searchbox bên trái, 1 combobox bên phải  -->
