--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -67,14 +67,14 @@
               <span class="qtybtn" (click)="increaseQuantity()"> + </span>
             </div>
           </div>
-          <a (click)="addToCart()" class="primary-btn">ADD TO CARD</a>
+          <a (click)="addToCart()" class="primary-btn">GIỎ HÀNG</a>
           <a (click)="addToFavourite(productId)" class="heart-icon"><span class="icon_heart_alt"></span></a>
-          <a (click)="buyNow()" class="primary-btn">BUY</a>
+          <a (click)="buyNow()" class="primary-btn">MUA</a>
 
           <ul>
             <li><b>Tổng tiền:</b><span>{{ getTotalPrice() | number:'1.0-0' }} <sup>vnđ</sup></span></li>
-            <li><b>Weight</b> <span>{{product?.weight}}</span></li>
-            <li><b>Share on</b>
+            <li><b>Khối lượng: </b> <span>{{product?.weight}}</span></li>
+            <li><b>Chia sẻ</b>
               <div class="share">
                 <a href="#" target="_blank" rel="noopener"><i class="fa fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -89,10 +89,10 @@
         <div class="product__details__tab">
           <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item">
-              <a class="nav-link active" data-toggle="tab" href="#tabs-3" role="tab" aria-selected="true">Comments</a>
+              <a class="nav-link active" data-toggle="tab" href="#tabs-3" role="tab" aria-selected="true">Bình luận</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-toggle="tab" href="#tabs-1" role="tab" aria-selected="false">Information</a>
+              <a class="nav-link" data-toggle="tab" href="#tabs-1" role="tab" aria-selected="false">Thông tin</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab" aria-selected="false">Reviews
@@ -142,7 +142,7 @@
                     </div>
                     <div class="float-end mt-2 pt-1">
                       <button type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-sm"
-                        (click)="postComment()">Post comment</button>
+                        (click)="postComment()">Đăng bình luận</button>
 
                     </div>
                   </div>
@@ -178,7 +178,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="section-title related__product__title">
-          <h2>Related Product</h2>
+          <h2>Sản phẩm liên quan</h2>
         </div>
       </div>
     </div>
