--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -56,7 +56,7 @@
                             </ul>
                         </li>
                         <li><a href="./blog">Blog</a></li>
-                        <li><a href="./contact.html">Liên hệ</a></li>
+                        <li><a href="./contact">Liên hệ</a></li>
                     </ul>
                 </nav>
             </div>
